--- a/style1.css
+++ b/style1.css
@@ -9,7 +9,7 @@
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url('flags\ 2.webp');
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url('Scandinavia-travel-flags.jpg');
     background-position: center;
     background-size: cover;
     position: relative;
